required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (future 6.0.3, SVN branch-6-0):
---------------------------

- Fixed Memory leak with fribidi strings (#4188)

- Added missing properties in styleObj setter of PHP/MapScript (#3901)

Version 6.0.2 (2012-02-08):
---------------------------

- Fix security issue with quote escape in WFS GetFeature Filter (#4087)

- Fixed lexer buffer size issue with single quotes in a string  (#4175)

- Raster layer fails to be drawn if the window is less than half a pixel (#4172)

- Fixed SLD with FILTER doesn't apply properly to database layers (#4112)

- Fixed a problem with calls to labelInImage() (maplabel.c) when label gutter
  and label buffers are both used (#3303). Also changed the usage around that
  function to make it easier to understand. At a result the
  "labelcache_map_edge_buffer" processing option (i.e. gutter) can be provided
  as a positive or negative value. (closes #1355 too)

- Added label->style markers to collision detection (#4133)

- Fixed single pixel coverages in WCS 2.0 (#4110)

- Fixed subsetting in WCS 2.0 (#4099)

- Fixed segfault when calling classObj::updateFromString() with SYMBOL (#4062)

- fix rendering offset on thick GD lines (#3962)

- fix segfault on join with postgresql tables (#4074)

- Fixed Python Mapscript does not write COLOR to reference map (#4042)
 
- Fixed cannot add a style to a label in PHP/SWIG Mapscript (#4038) 

- Add missing outputFormat support in WFS GetFeature POST XML requests (#4052)

- Fixed schema validity issue for WCS 1.1 GetCoverage responses (#4047)

- fix centroid geomtransform parser (#4029)

- PHP MapScript is missing many styleObj properties (#3901)
